chore: rename plugin, fix ci issues

--- a/.config/docker-compose-base.yaml
+++ b/.config/docker-compose-base.yaml
@@ -1,7 +1,7 @@
 services:
   grafana:
     user: root
-    container_name: 'elohmeier-rqlite-datasource'
+    container_name: 'g42-rqlite-datasource'
 
     build:
       context: .
@@ -19,13 +19,13 @@ services:
     cap_add:
       - SYS_PTRACE
     volumes:
-      - ../dist:/var/lib/grafana/plugins/elohmeier-rqlite-datasource
+      - ../dist:/var/lib/grafana/plugins/g42-rqlite-datasource
       - ../provisioning:/etc/grafana/provisioning
-      - ..:/root/elohmeier-rqlite-datasource
+      - ..:/root/g42-rqlite-datasource
 
     environment:
       NODE_ENV: development
-      GF_LOG_FILTERS: plugin.elohmeier-rqlite-datasource:debug
+      GF_LOG_FILTERS: plugin.g42-rqlite-datasource:debug
       GF_LOG_LEVEL: debug
       GF_DATAPROXY_LOGGING: 1
-      GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: elohmeier-rqlite-datasource
+      GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: g42-rqlite-datasource
