--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
   - repo: https://github.com/golangci/golangci-lint
     rev: v2.10.1
     hooks:
-      - id: golangci-lint
+      - id: golangci-lint-full
         stages: [pre-push]
 
   - repo: local
