--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,4 +55,9 @@ jobs:
           ref: v${{ needs.release.outputs.version }}
           persist-credentials: false
 
+      - name: Setup Go
+        uses: actions/setup-go@v6
+        with:
+          go-version-file: go.mod
+
       - uses: grafana/plugin-actions/build-plugin@build-plugin/v1.0.2
