fix: override GITHUB_REF for build-plugin tag validation
The build-plugin action validates that GITHUB_REF matches the plugin
version tag, but since the workflow triggers on push to main,
GITHUB_REF is refs/heads/main. Override it at the job level.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,8 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
+    env:
+      GITHUB_REF: refs/tags/v${{ needs.release.outputs.version }}
     steps:
       - uses: actions/checkout@v6
         with:
