--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,14 +49,22 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    env:
-      GITHUB_REF: refs/tags/v${{ needs.release.outputs.version }}
     steps:
       - uses: actions/checkout@v6
         with:
           ref: v${{ needs.release.outputs.version }}
           persist-credentials: false
 
-      - uses: grafana/plugin-actions/build-plugin@build-plugin/v1.0.2
+      - name: Build and package plugin
+        id: package-plugin
+        uses: grafana/plugin-actions/package-plugin@main
         with:
           go-version: '1.25'
+
+      - name: Attach plugin to GitHub release
+        uses: softprops/action-gh-release@72f2c25fcb47643c292f7107632f7a47c1df5cd8 # v2.3.2
+        with:
+          tag_name: v${{ needs.release.outputs.version }}
+          files: |
+            ./${{ steps.package-plugin.outputs.archive }}
+            ./${{ steps.package-plugin.outputs.archive-sha1sum }}
